--- a/index.html
+++ b/index.html
@@ -367,18 +367,49 @@
             margin-top: 40px;
         }
 
-            /* צבע הגלים */
-            .wave-divider svg {
-                position: relative;
-                display: block;
+        /* === עיצוב מפת Google Maps ללא API === */
+        .map-container {
+            width: 100%;
+            max-width: 800px;
+            height: 400px;
+            margin: 40px auto;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            border: 3px solid rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+            /* === Iframe המפה - ממלא את כל המסגרת === */
+            .map-container iframe {
                 width: 100%;
-                height: 100px;
+                height: 100%;
+                border: 0;
+            }
+        /* === כפתור ניווט לגוגל מפות === */
+        .nav-button {
+            display: inline-block;
+            background: var(--primary-color);
+            color: white;
+            font-size: 1.2em;
+            font-weight: bold;
+            padding: 12px 25px;
+            border-radius: 50px;
+            text-decoration: none;
+            margin-top: 20px;
+            transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+            /* === אנימציה בלחיצה === */
+            .nav-button:hover {
+                background: var(--hover-color);
+                transform: scale(1.1);
             }
 
-            /* התאמת צבעים של הגלים */
-            .wave-divider .shape-fill {
-                fill: var(--light-gray);
-            }
 
     </style>
 </head>
@@ -416,11 +447,20 @@
         </div>
     </div>
 
-    <div class="wave-divider">
-        <svg viewBox="0 0 1440 320" preserveAspectRatio="none">
-            <path class="shape-fill" d="M0,64L48,96C96,128,192,192,288,186.7C384,181,480,107,576,106.7C672,107,768,181,864,202.7C960,224,1056,192,1152,160C1248,128,1344,96,1392,80L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
-        </svg>
+    <!-- מפת העסק - גוש חלב 3, ראשון לציון -->
+    <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3387.442814022294!2d34.8232508!3d31.9634721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502a334b8f1e8cf%3A0x45a682cf4a9e47eb!2z15TXqNeV15nXqNeZIDMsINeQ15XXoNeV15w!5e0!3m2!1siw!2sil!4v1708600000000!5m2!1siw!2sil"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </div>
+
+    <!-- כפתור ניווט לגוגל מפות -->
+    <a href="https://www.google.com/maps/dir/?api=1&destination=31.9634721,34.8232508" target="_blank" class="nav-button">
+        תגיעו
+    </a>
+
 
 
     <script>
